# competition-2025-winners

./: .env  .gitignore  README.md  compose.yaml  environment.yml  pbcBase.Dockerfile
bots/all_in/: Dockerfile  player.py
bots/all_in/skeleton/: runner.py
bots/blind_bandit/: name.txt  player.py  requirements.txt
bots/blind_bandit/skeleton/: runner.py  states.py
bots/cpp_skeleton/: Dockerfile  build.sh
bots/cpp_skeleton/libs/skeleton/include/skeleton/: constants.h
bots/graph_von_monte_carlo/: CMakeLists.txt  build.sh  name.txt
bots/graph_von_monte_carlo/libs/skeleton/: CMakeLists.txt
bots/graph_von_monte_carlo/libs/skeleton/include/skeleton/: runner.h
bots/graph_von_monte_carlo/libs/skeleton/src/: actions.cpp  states.cpp
bots/graph_von_monte_carlo/ourlibs/: gah.h  preflop.h
bots/graph_von_monte_carlo/src/: main.cpp  util.cpp
bots/harry/: Dockerfile  commands.json  player.py  preflop_lookup.csv  requirements.txt
bots/python_skeleton/: player.py
engine/: Dockerfile  config.py  engine.py  stats.py
submission/example/: name.txt
submission/example/skeleton/: runner.py
